--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "autoprefixer": "^10.4.21",
+    "node-telegram-bot-api": "^0.64.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
   }
