--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,7 +44,7 @@
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "autoprefixer": "^10.4.21",
-    "node-telegram-bot-api": "^0.64.0",
+    "node-telegram-bot-api": "^0.63.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
   }
