--- a/package.json
+++ b/package.json
@@ -8,20 +8,17 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.1",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "tailwind:init": "tailwindcss init -p"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -42,9 +39,7 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.13",
     "autoprefixer": "^10.4.21",
-    "node-telegram-bot-api": "^0.63.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
   }
